@startuml

    skinparam classAttributeIconSize 0

    namespace ch.tofind.commusica.playlist {

        class PlaylistTrack {
            -hasBeenPlayed: ReadOnlyBooleanWrapper
            -votes: Integer
            -votesProperty: IntegerProperty
            +hasBeenPlayed(): ReadOnlyBooleanProperty
            +upvote(): void
            +downvote(): void
            +update(): void
        }

        class PlaylistManager {
            {static} -LOG: Logger
            {static} -instance: PlaylistManager
            -savedPlaylists: List<SavedPlaylist>
            -playlist: EphemeralPlaylist
            -favoritesPlaylist: SavedPlaylist
            {static} +getInstance(): PlaylistManager
            +getPlaylist(): EphemeralPlaylist
            +createPlaylist(String): SavedPlaylist
            +removePlaylist(SavedPlaylist): void
            +getSavedPlaylists(): List<SavedPlaylist>
            +getFavoritesPlaylist(): SavedPlaylist
            +addTrackToFavorites(Track): void
            +removeTrackFromFavorites(Track): void
            -retrieveFavoritesPlaylist(): SavedPlaylist
            -retrievePlaylists(): List<SavedPlaylist>
        }

        class VoteComparator {
            +compare(PlaylistTrack, PlaylistTrack): int
        }

        class PlaylistTrackId {
            -playlist: SavedPlaylist
            -track: Track
            +PlaylistTrackId(SavedPlaylist, Track)
        }

        interface java.io.Serializable
        java.io.Serializable <|.. PlaylistTrack

        interface java.util.Comparator<T> {
            {abstract} +compare(T, T): int
        }
        java.util.Comparator <|.. VoteComparator

        java.io.Serializable <|.. PlaylistTrackId

        PlaylistTrack --> PlaylistTrackId: id

    }

@enduml
